changed layout and created the structure

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
   </head>
   <body>
     <header>
-      <h1>FireMusic</h1>
+      <h1>Din musik</h1>
     </header>
     <main>
       <div class="playlistContainer">
         <form id="form">
-          <input type="text" id="textBox" placeholder="Spellistans namn" required />
-          <input type="text" id="textBox" placeholder="Genre" required />
-          <input type="text" id="textBox" placeholder="Artist" required />
-          <input type="text" id="textBox" placeholder="Låtar" required />
+          <input type="text" id="playlistName" placeholder="Namn på spellistan" required />
+          <input type="text" id="genreName" placeholder="Genre" required />
+          <input type="text" id="artistName" placeholder="Artist" required />
+          <input type="text" id="songName" placeholder="Låtar" required />
           <button type="submit" id="playlistBtn">Skapa spellista</button>
         </form>
         <section id="createPlaylist"></section>
