--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="./content/js/script.js" defer></script>
+    <script type="module" src="./content/js/main.js" defer></script>
     <link rel="stylesheet" href="./content/css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,6 +19,7 @@
     </header>
     <main>
       <div class="genreButtons">
+        <button type="button" id="allGenre">ALLT</button>
         <button type="button" id="popGenre">POP</button>
         <button type="button" id="soulGenre">SOUL</button>
         <button type="button" id="rockGenre">ROCK</button>
