removed wrong text

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
       <div class="genreButtons">
         <button type="button" id="allGenre">ALLT</button>
-git st        <button type="button" id="popGenre">POP</button>
+        <button type="button" id="popGenre">POP</button>
         <button type="button" id="soulGenre">SOUL</button>
         <button type="button" id="rockGenre">ROCK</button>
         <button type="button" id="hiphopGenre">HIPHOP</button>
