fixed toggle on btns

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     </header>
     <main>
       <div class="genreButtons">
-        <button type="button" id="allGenre">ALLT</button>
-        <button type="button" id="popGenre">POP</button>
-        <button type="button" id="soulGenre">SOUL</button>
-        <button type="button" id="rockGenre">ROCK</button>
-        <button type="button" id="hiphopGenre">HIPHOP</button>
-        <button type="button" id="rnbGenre">R&B</button>
+        <button class="button" data-genre="All">ALLT</button>
+        <button class="button" data-genre="Pop">POP</button>
+        <button class="button" data-genre="Soul">SOUL</button>
+        <button class="button" data-genre="Rock">ROCK</button>
+        <button class="button" data-genre="HipHop">HIPHOP</button>
+        <button class="button" data-genre="R&B">R&B</button>
       </div>
 
       <div class="songListForm">
