--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h1>Din musik</h1>
     </header>
     <main>
-      <div class="genreButtons">
+      <div class="genre-buttons">
         <button class="button" data-genre="All">ALLT</button>
         <button class="button" data-genre="Pop">POP</button>
         <button class="button" data-genre="Soul">SOUL</button>
@@ -27,8 +27,8 @@
         <button class="button" data-genre="R&B">R&B</button>
       </div>
 
-      <div class="songListForm">
-        <div id="playlistContainer"></div>
+      <div class="song-listform">
+        <div id="playlist-container"></div>
       </div>
     </main>
   </body>
